--- a/manifests/k8s.yml
+++ b/manifests/k8s.yml
@@ -1,35 +1,34 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: traffic-server
+  name: {model_name}-deployment
 spec:
   selector:
     matchLabels:
-      app: traffic-server
+      app: {model_name}-server
   replicas: 1
   template:
     metadata:
       labels:
-        app: traffic-server
+        app: {model_name}-server
     spec:
       containers:
-      - name: traffic-container
-        image: docker.io/itzelrios/fastapiml:latest
+      - name: {model_name}-container
+        #image: gcr.io/tensorflow-serving/resnet 
+        image: docker.io/{docker_user}/{model_name}:{github.sha}
         ports:
         - containerPort: 80
-
-      
 ---
 apiVersion: v1
 kind: Service
 metadata:
   labels:
-    run: traffic-service
-  name: traffic-service
+    run: {model_name}-service
+  name: {model_name}-service
 spec:
   ports:
   - port: 80
     targetPort: 80
   selector:
-    app: traffic-server
+    app: {model_name}-server
   type: LoadBalancer
