--- a/.github/workflows/ml_ci_cd.yml
+++ b/.github/workflows/ml_ci_cd.yml
@@ -16,9 +16,9 @@ jobs:
     - name: pip install
       run: pip install -r requirements.txt
     - name: download dataset
-      run: wget -O data/heart_failure_clinical_records_dataset.csv ${{github.event.client_payload.dataseturl}}
+      run: wget -O data/traffic.csv ${{github.event.client_payload.dataseturl}}
     - name: cat dataset
-      run: cat data/heart_failure_clinical_records_dataset.csv
+      run: cat data/traffic.csv
     - name: train model
       run: python model/train.py
     - name: docker build
